@@ -28,6 +28,10 @@ Ipe 7.2.29
  * Fix setting grid size and angle size through the Snap menu on
    Windows (bug #496).
 
+ * Fix selecting, snapping to, and bounding box of objects with
+   restricted transformations (translations only or rigid motions
+   only) (bug #493).
+
 ----------------------------------------------------------------------
 
 Ipe 7.2.28 (2023-08-13)
